--- a/manifest.json
+++ b/manifest.json
@@ -20,8 +20,7 @@
         },
         {
             "matches": ["https://*.pie.iu.edu/InventoryReports*"],
-            "js": ["contentScripts/inventoryReports.js"],
-            "run_at": "document_end"
+            "js": ["contentScripts/inventoryReports.js"]
         }
     ],
     "action": {
