discovered a way for the extension to save files with the Chrome downloads API and data URIs

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
     "description": "Adds some much-needed QOL features to PIE",
     "permissions": [
         "storage",
-        "tabs"
+        "tabs",
+        "downloads"
     ],
     "host_permissions": [
         "https://*.pie.iu.edu/*"
