the injected save button is always on the page now

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
     "permissions": [
         "storage",
         "tabs",
-        "downloads"
+        "downloads",
+        "history"
     ],
     "host_permissions": [
         "https://*.pie.iu.edu/*"
