method for getting inventory levels isnt really panning out

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -23,7 +23,8 @@
         },
         {
             "matches": ["https://*.pie.iu.edu/InventoryReports*", "https://*.pie.iu.edu/inventoryReports*"],
-            "js": ["inventoryReports.js"]
+            "js": ["inventoryReports.js"],
+            "run_at": "document_end"
         }
     ],
     "action": {
