added an icon for the extension

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -7,9 +7,11 @@
     "permissions": [
         "storage",
         "tabs",
-        "downloads",
         "history"
     ],
+    "icons": {
+        "48": "images/icon48.png"
+    },
     "host_permissions": [
         "https://*.pie.iu.edu/*"
     ],
